# graph_storage

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
benchmark/: CMakeLists.txt  serialization.cpp
graph/: Node.cpp  Node.hpp  Relationship.hpp
include/graph/: Node.hpp  Relationship.hpp
include/storage/: FileInfo.hpp  FileUtils.hpp
include/virtual_memory/: RleEncoder.hpp  Serializer.hpp
protoc/: CMakeLists.txt  Node.proto  README.md  Relationship.proto
protoc/graph/: CMakeLists.txt  binaryfilename  graph.data  graph_classes.pb.cc  graph_classes.pb.h  graph_classes.proto  main.cpp
protoc/graph_build/: CMakeCache.txt  cmake_install.cmake  graph_classes.pb.h
protoc/graph_build/CMakeScripts/: ReRunCMake.make
protoc/graph_build/Project.xcodeproj/: project.pbxproj
protoc/graph_build/Project.xcodeproj/project.xcworkspace/xcuserdata/dascha.xcuserdatad/: UserInterfaceState.xcuserstate
src/: CMakeLists.txt
src/graph/: CMakeLists.txt  Node.cpp
src/storage/: CMakeLists.txt  FileUtils.cpp
src/virtual_memory/: CMakeLists.txt  Serializer.cpp
test/: CMakeLists.gtest.txt  CMakeLists.txt
test/virtual_memory/: CMakeLists.txt  RleEncodingTest.cpp  SerializerTest.cpp
test/virtual_memory/data/: lenna_tga.hpp  random_512.hpp
